Adding exercice two

--- a/ex2/index.html
+++ b/ex2/index.html
@@ -6,6 +6,14 @@
         </title>
     </head>
     <body>
+        <ul id="list">
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+            <li>item 5</li>
+        </ul>
+        
         <script type="text/javascript" src="./ex.js"></script>
     </body>
 </html>
