--- a/css/index.html
+++ b/css/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -17,5 +17,12 @@
             <li>item 5</li>
         </ul>
     </nav>
+    <div id="big-square-flex">
+        <div id="small-square-flex"></div>
+    </div>
+
+    <div id="big-square-transform">
+        <div id="small-square-transform"></div>
+    </div>
 </body>
 </html>
