Adding extra centering solutions

--- a/css/index.html
+++ b/css/index.html
@@ -17,10 +17,13 @@
             <li>item 5</li>
         </ul>
     </nav>
+    
+    <h2>Flex aproach</h2>
     <div id="big-square-flex">
         <div id="small-square-flex"></div>
     </div>
 
+    <h2>Transform aproach</h2>
     <div id="big-square-transform">
         <div id="small-square-transform"></div>
     </div>
